# coze

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
model/: README.md  stablelm-2-zephyr-1_6b-Q4_1.gguf
src/: controller.rs  generator.rs  gui.rs  lib.rs  main.rs  models.rs
src/generator/: arcade100k.rs  model_config.json  token_output_stream.rs  transformer.rs  weights_cache.rs
src/gui/: bubble.rs  config.rs  error.rs  gauge.rs  help.rs  history.rs  load_panel.rs  models_panel.rs  prompt_panel.rs
src/models/: cache.rs  config.rs  qmistral.rs  qstablelm.rs  qzephyr.rs  transformers.rs
src/models/qstablelm/: transformer.rs
src/models/transformers/: quantized_llama.rs  quantized_stable_lm.rs
