[package]
authors = ["Vince Vasta <vince.vasta@gmail.com>"]
description = "An egui app for playing with a local open source LLM."
edition = "2021"
license = "Apache-2.0"
name = "coze"
repository = "https://github.com/vincev/coze"
version = "0.1.6"

[dependencies]
anyhow = "1.0.79"
base64 = "0.22"
candle = { version = "0.4", default-features = false, package = "candle-core" }
candle-nn = { version = "0.4", default-features = false }
candle-transformers = { version = "0.4", default-features = false }
chrono = { version = "0.4.35", features = ["clock", "serde", "std"], default-features = false }
crossbeam-channel = "0.5.11"
dirs = "5.0.1"
fancy-regex = "0.13.0"
hf-hub = "0.3.2"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"
strum = { version = "0.26.1", features = ["derive"] }
tokenizers = { version = "0.15.2", default-features = false, features = ["fancy-regex", "onig"] }
tracing = { version = "0.1.40", default-features = false }
ureq = "2.9.6"

[dependencies.eframe]
version = "0.26.0"
default-features = false
features = ["default_fonts", "glow", "persistence"]
